# trypanophobe

./: .gitignore  Cargo.toml  README.md  build.rs  coverage.sh  smoke.sh
.cargo/: config.toml
.github/workflows/: ci.yml
docker/: Dockerfile.build  darwin-x64-build.sh  windows-cross-build.sh
scripts/: ci-cleanup.sh
src/: assets.rs  cli.rs  detector.rs  http.rs  inputs.rs  language.rs  lib.rs  main.rs  model_slot.rs  types.rs
tests/: api_integration.rs  model_integration.rs  smoke_cli.rs
